# ML-Zoomcamp-Credit-Approval-API

./: Dockerfile  README.md  Taskfile.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: main.py
app/config/: logging_config.py
app/routers/: predict_route.py
app/schemas/: input_schema.py  output_schema.py
app/services/: latest_model.py  status_response.py
data/: data_cleaned.csv  dataset-credit.csv
models/: best_model_v1.0.pkl  train.py
tests/: test_main.py
tests/data/: test_data.json
