[tool.poetry]
name = "ml-zoomcamp"
version = "3.12"
description = "This is a dependency file"
authors = ["ValentinaStojanovikj <angelovska13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
numpy = "^2.1.3"
pandas = "^2.2.3"
uvicorn = "^0.32.1"
scikit-learn = "^1.5.2"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pytest = "^8.3.4"
awsebcli = "^3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
